version/0.11/_sources/API/_autosummary/ansys.aedt.core.maxwell.Maxwell3d.rst.txt
Maxwell3d
=========

.. currentmodule:: ansys.aedt.core.maxwell

.. autoclass:: Maxwell3d

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Maxwell3d.activate_variable_optimization
      
      
      Maxwell3d.activate_variable_sensitivity
      
      
      Maxwell3d.activate_variable_statistical
      
      
      Maxwell3d.activate_variable_tuning
      
      
      Maxwell3d.add_error_message
      
      
      Maxwell3d.add_from_toolkit
      
      
      Maxwell3d.add_info_message
      
      
      Maxwell3d.add_stackup_3d
      
      
      Maxwell3d.add_warning_message
      
      
      Maxwell3d.add_winding_coils
      
      
      Maxwell3d.analyze
      
      
      Maxwell3d.analyze_from_zero
      
      
      Maxwell3d.analyze_setup
      
      
      Maxwell3d.apply_skew
      
      
      Maxwell3d.archive_project
      
      
      Maxwell3d.assign_coil
      
      
      Maxwell3d.assign_current
      
      
      Maxwell3d.assign_current_density
      
      
      Maxwell3d.assign_current_density_terminal
      
      
      Maxwell3d.assign_floating
      
      
      Maxwell3d.assign_flux_tangential
      
      
      Maxwell3d.assign_force
      
      
      Maxwell3d.assign_impedance
      
      
      Maxwell3d.assign_insulating
      
      
      Maxwell3d.assign_layout_force
      
      
      Maxwell3d.assign_master_slave
      
      
      Maxwell3d.assign_material
      
      
      Maxwell3d.assign_matrix
      
      
      Maxwell3d.assign_radiation
      
      
      Maxwell3d.assign_rotate_motion
      
      
      Maxwell3d.assign_symmetry
      
      
      Maxwell3d.assign_tangential_h_field
      
      
      Maxwell3d.assign_torque
      
      
      Maxwell3d.assign_translate_motion
      
      
      Maxwell3d.assign_voltage
      
      
      Maxwell3d.assign_voltage_drop
      
      
      Maxwell3d.assign_winding
      
      
      Maxwell3d.assign_zero_tangential_h_field
      
      
      Maxwell3d.assignmaterial_from_sherlock_files
      
      
      Maxwell3d.autosave_disable
      
      
      Maxwell3d.autosave_enable
      
      
      Maxwell3d.change_automatically_use_causal_materials
      
      
      Maxwell3d.change_design_settings
      
      
      Maxwell3d.change_inductance_computation
      
      
      Maxwell3d.change_material_override
      
      
      Maxwell3d.change_property
      
      
      Maxwell3d.change_symmetry_multiplier
      
      
      Maxwell3d.change_validation_settings
      
      
      Maxwell3d.check_beta_option_enabled
      
      
      Maxwell3d.check_if_project_is_loaded
      
      
      Maxwell3d.clean_proj_folder
      
      
      Maxwell3d.cleanup_solution
      
      
      Maxwell3d.close_desktop
      
      
      Maxwell3d.close_project
      
      
      Maxwell3d.copy_design_from
      
      
      Maxwell3d.copy_project
      
      
      Maxwell3d.copy_solid_bodies_from
      
      
      Maxwell3d.create_dataset
      
      
      Maxwell3d.create_dataset1d_design
      
      
      Maxwell3d.create_dataset1d_project
      
      
      Maxwell3d.create_dataset3d
      
      
      Maxwell3d.create_external_circuit
      
      
      Maxwell3d.create_new_project
      
      
      Maxwell3d.create_output_variable
      
      
      Maxwell3d.create_setup
      
      
      Maxwell3d.dataset_exists
      
      
      Maxwell3d.deactivate_variable_optimization
      
      
      Maxwell3d.deactivate_variable_sensitivity
      
      
      Maxwell3d.deactivate_variable_statistical
      
      
      Maxwell3d.deactivate_variable_tuning
      
      
      Maxwell3d.delete_design
      
      
      Maxwell3d.delete_project
      
      
      Maxwell3d.delete_separator
      
      
      Maxwell3d.delete_setup
      
      
      Maxwell3d.delete_unused_variables
      
      
      Maxwell3d.delete_variable
      
      
      Maxwell3d.design_variation
      
      
      Maxwell3d.duplicate_design
      
      
      Maxwell3d.eddy_effects_on
      
      
      Maxwell3d.edit_external_circuit
      
      
      Maxwell3d.edit_setup
      
      
      Maxwell3d.enable_harmonic_force
      
      
      Maxwell3d.enable_harmonic_force_on_layout_component
      
      
      Maxwell3d.evaluate_expression
      
      
      Maxwell3d.export_3d_model
      
      
      Maxwell3d.export_convergence
      
      
      Maxwell3d.export_design_preview_to_jpg
      
      
      Maxwell3d.export_element_based_harmonic_force
      
      
      Maxwell3d.export_mesh_stats
      
      
      Maxwell3d.export_parametric_results
      
      
      Maxwell3d.export_profile
      
      
      Maxwell3d.export_results
      
      
      Maxwell3d.export_rl_matrix
      
      
      Maxwell3d.export_variables_to_csv
      
      
      Maxwell3d.flatten_3d_components
      
      
      Maxwell3d.generate_temp_project_directory
      
      
      Maxwell3d.generate_unique_setup_name
      
      
      Maxwell3d.get_all_conductors_names
      
      
      Maxwell3d.get_all_dielectrics_names
      
      
      Maxwell3d.get_all_source_modes
      
      
      Maxwell3d.get_all_sources
      
      
      Maxwell3d.get_components3d_vars
      
      
      Maxwell3d.get_conduction_paths
      
      
      Maxwell3d.get_dxf_layers
      
      
      Maxwell3d.get_evaluated_value
      
      
      Maxwell3d.get_module
      
      
      Maxwell3d.get_monitor_data
      
      
      Maxwell3d.get_nominal_variation
      
      
      Maxwell3d.get_object_material_properties
      
      
      Maxwell3d.get_oo_name
      
      
      Maxwell3d.get_oo_object
      
      
      Maxwell3d.get_oo_properties
      
      
      Maxwell3d.get_oo_property_value
      
      
      Maxwell3d.get_output_variable
      
      
      Maxwell3d.get_profile
      
      
      Maxwell3d.get_property_value
      
      
      Maxwell3d.get_registry_key_int
      
      
      Maxwell3d.get_registry_key_string
      
      
      Maxwell3d.get_setup
      
      
      Maxwell3d.get_setups
      
      
      Maxwell3d.get_sweeps
      
      
      Maxwell3d.get_traces_for_plot
      
      
      Maxwell3d.hidden_variable
      
      
      Maxwell3d.identify_touching_conductors
      
      
      Maxwell3d.import_3d_cad
      
      
      Maxwell3d.import_dataset1d
      
      
      Maxwell3d.import_dataset3d
      
      
      Maxwell3d.import_dxf
      
      
      Maxwell3d.import_gds_3d
      
      
      Maxwell3d.insert_design
      
      
      Maxwell3d.list_of_variations
      
      
      Maxwell3d.load_project
      
      
      Maxwell3d.number_with_units
      
      
      Maxwell3d.plot
      
      
      Maxwell3d.read_design_data
      
      
      Maxwell3d.read_only_variable
      
      
      Maxwell3d.release_desktop
      
      
      Maxwell3d.remove_all_unused_definitions
      
      
      Maxwell3d.rename_design
      
      
      Maxwell3d.save_project
      
      
      Maxwell3d.set_active_design
      
      
      Maxwell3d.set_active_dso_config_name
      
      
      Maxwell3d.set_core_losses
      
      
      Maxwell3d.set_initial_angle
      
      
      Maxwell3d.set_license_type
      
      
      Maxwell3d.set_oo_property_value
      
      
      Maxwell3d.set_registry_from_file
      
      
      Maxwell3d.set_registry_key
      
      
      Maxwell3d.set_source_context
      
      
      Maxwell3d.set_temporary_directory
      
      
      Maxwell3d.setup_y_connection
      
      
      Maxwell3d.solve_in_batch
      
      
      Maxwell3d.solve_inside
      
      
      Maxwell3d.stop_simulations
      
      
      Maxwell3d.submit_job
      
      
      Maxwell3d.validate_simple
      
      
      Maxwell3d.value_with_units
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Maxwell3d.Position
      Maxwell3d.SimulationSetupTypes
      Maxwell3d.SolutionTypes
      Maxwell3d.active_setup
      Maxwell3d.aedt_version_id
      Maxwell3d.are_there_simulations_running
      Maxwell3d.available_variations
      Maxwell3d.boundaries
      Maxwell3d.boundaries_by_type
      Maxwell3d.components3d
      Maxwell3d.configurations
      Maxwell3d.default_solution_type
      Maxwell3d.design_datasets
      Maxwell3d.design_file
      Maxwell3d.design_list
      Maxwell3d.design_name
      Maxwell3d.design_properties
      Maxwell3d.design_type
      Maxwell3d.desktop_class
      Maxwell3d.desktop_install_dir
      Maxwell3d.dim
      Maxwell3d.excitation_objects
      Maxwell3d.excitations
      Maxwell3d.excitations_by_type
      Maxwell3d.existing_analysis_setups
      Maxwell3d.existing_analysis_sweeps
      Maxwell3d.info
      Maxwell3d.layouteditor
      Maxwell3d.library_list
      Maxwell3d.lock_file
      Maxwell3d.logger
      Maxwell3d.materials
      Maxwell3d.mesh
      Maxwell3d.modeler
      Maxwell3d.native_component_names
      Maxwell3d.native_components
      Maxwell3d.nominal_adaptive
      Maxwell3d.nominal_sweep
      Maxwell3d.o_component_manager
      Maxwell3d.o_maxwell_parameters
      Maxwell3d.o_model_manager
      Maxwell3d.o_symbol_manager
      Maxwell3d.oanalysis
      Maxwell3d.oboundary
      Maxwell3d.odefinition_manager
      Maxwell3d.odesign
      Maxwell3d.odesktop
      Maxwell3d.oeditor
      Maxwell3d.oexcitation
      Maxwell3d.ofieldsreporter
      Maxwell3d.oimport_export
      Maxwell3d.omaterial_manager
      Maxwell3d.omatrix
      Maxwell3d.omeshmodule
      Maxwell3d.omodelsetup
      Maxwell3d.omonitor
      Maxwell3d.ooptimetrics
      Maxwell3d.ooutput_variable
      Maxwell3d.opadstackmanager
      Maxwell3d.oproject
      Maxwell3d.optimizations
      Maxwell3d.oradfield
      Maxwell3d.oreportsetup
      Maxwell3d.osolution
      Maxwell3d.output_variables
      Maxwell3d.parametrics
      Maxwell3d.personallib
      Maxwell3d.ports
      Maxwell3d.post
      Maxwell3d.project_datasets
      Maxwell3d.project_file
      Maxwell3d.project_list
      Maxwell3d.project_name
      Maxwell3d.project_path
      Maxwell3d.project_properties
      Maxwell3d.project_time_stamp
      Maxwell3d.project_timestamp_changed
      Maxwell3d.pyaedt_dir
      Maxwell3d.results_directory
      Maxwell3d.settings
      Maxwell3d.setup_names
      Maxwell3d.setups
      Maxwell3d.solution_type
      Maxwell3d.src_dir
      Maxwell3d.symmetry_multiplier
      Maxwell3d.syslib
      Maxwell3d.temp_directory
      Maxwell3d.toolkit_directory
      Maxwell3d.userlib
      Maxwell3d.valid_design
      Maxwell3d.variable_manager
      Maxwell3d.windings
      Maxwell3d.working_directory
   
   